@@ -2,7 +2,13 @@ This is KVIrc's changelog. It tipically lists new added features and changes tha
 KVIrc's previous behaviour. For a more detailed (and up to date) log, point your browser at:
 https://svn.kvirc.de/kvirc/timeline
 
-Update: 20120701
+Update: 20141104
+
+November 2014
+   [OmegaPhil]
+   - KVIrc Script: 'WordBreak' alignment type for the hbox, vbox and label
+     widgets has been renamed to 'Justify' to reflect what it actually does -
+     this will break any scripts using this alignment type currently (sorry)
 
 May 2012
    [egns]
